# artificer

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .vercelignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PYTHON_MIGRATION_SUMMARY.md  PYTHON_STRATEGY_SUMMARY.md  README.md  SECURITY.md  docker-compose.highlight.yml  docker-compose.prefect.yml  docker-compose.yml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.ts  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.root.json  vercel.json  vitest.config.ts  vitest.e2e.config.ts
.github/workflows/: ci.yml
apps/fableforge-demo/: next.config.js  package.json  tsconfig.json
apps/hellbat-demo/: next.config.js  package.json  tsconfig.json
apps/translator-demo/: next.config.js  package.json  tsconfig.json
apps/workbench/: .eslintrc.json  .prettierrc  next.config.js  package.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
apps/worldbuilder-demo/: next.config.js  package.json  tsconfig.json
config/: models.json
docs/: .DEPLOYMENT.md.kate-swp  API.md  AUTHENTICATION.md  BATCH_PROCESSING.md  CONTEXT_COMPRESSION.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENT_UPDATE_INTEGRATION.md  HIGHLIGHT_SETUP.md  IMAGE_OCR_IMPLEMENTATION_STATUS.md  IMAGE_OCR_INTEGRATION_PROPOSAL.md  IMPLEMENTATION_SUMMARY.md  LLAMAINDEX_RAG_ASSESSMENT.md  LOGGING_MIGRATION.md  NEXTJS_MIGRATION_ASSESSMENT.md  OCR_IMPLEMENTATION.md  ORCHESTRATION.md  PYTHON_BACKEND_MIGRATION_ASSESSMENT.md  PYTHON_FALLBACK.md  README.md  SECURITY.md  SSE_MIGRATION.md  SSE_STREAMING.md  STANDALONE_API.md  START_HERE.md  STRUCTURED_QUERY_INTEGRATION.md  TECHNICAL_SUMMARY.md  TESTING.md  THEMING.md  UI_ORCHESTRATION_INTEGRATION.md  VECTOR_DATABASE.md  agent-architecture-plan.md  architecture-summary.md  artificer-ui-library-proposal.md  fableforge-component-abstractions.md  fableforge-implementation-guide.md  hellbat-component-architecture.md  translator-component-abstractions.md  translator-implementation-guide.md  worldbuilder-component-architecture.md
docs/internal/: GRPC_VS_REST_ANALYSIS.md  PYTHON_EXTRACTION_ASSESSMENT.md  PYTHON_MIGRATION_SUMMARY.md  PYTHON_SDK_PLAN.md  PYTHON_STRATEGY_SUMMARY.md
examples/batch-processing/: README.md  document-pipeline.ts  quick-start.ts  translation-workflow.ts  validation-spike.ts
lib/document-converter/: .gitignore  ADAPTER_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  NPM_READINESS_REPORT.md  PR_READINESS_ASSESSMENT.md  QUICKSTART.md  README.md  (+3 more)
prisma/: schema.prisma
python/: .dockerignore  Dockerfile  GOOGLE_VISION_SETUP.md  GRPC_README.md  PREFECT_WORKFLOWS.md  QUICKSTART_PYTHON.md  README.md  TYPE_SAFETY.md  __init__.py  pyproject.toml  requirements.txt
python/artificer_client/: README.md  __init__.py  client.py  exceptions.py  pyproject.toml  types.py
python/artificer_client/examples/: async_workflow_examples.py  complete_workflow.py  custom_workflow_examples.py  langgraph_examples.py  llamaindex_examples.py  template_examples.py  workflow_examples.py
python/artificer_client/resources/: __init__.py  base.py  batch.py  chat.py  conversations.py  export.py  images.py  monitoring.py  projects.py  search.py  workflows.py
python/artificer_sdk/: MANIFEST.in  README.md  __init__.py  client.py  examples.py  pyproject.toml  setup.py  version.py
python/artificer_sdk/clients/: __init__.py  conversion.py  image.py  metrics.py  pdf.py  text.py
python/flows/: __init__.py  document_processing.py  langgraph_executor.py  langgraph_schema.py  llamaindex_retrieval.py  translation_pipeline.py  workflow_generator.py  workflow_schema.py  workflow_templates.py
python/flows/examples/: __init__.py  fableforge_mock.py  hello_workflow.py
python/flows/tasks/: __init__.py  artificer_tasks.py  webhook_tasks.py
python/processors/: __init__.py  batch_export.py  html.py  html_import.py  image.py  markdown.py  markdown_export.py  models.py  notion_export.py  ocr.py  pdf.py  roam_export.py  text.py  types.py
python/processors/ocr_providers/: __init__.py  base.py  google_vision.py  openai_vision.py  tesseract.py
python/services/: __init__.py  dual_server.py  grpc_server.py  logger.py  metrics.py  ocr_service.py
python/services/grpc/: conversion_service.py
python/services/grpc_handlers/: __init__.py  image_service.py  metrics_service.py  pdf_service.py  text_service.py
python/tests/: __init__.py  conftest.py  test_batch_export.py  test_exporters.py  test_html_import.py  test_image.py  test_notion_roam_export.py  test_pdf.py  test_text.py
python/tests/fixtures/: sample.md
scripts/: check-embeddings.ts  check-selected-models.ts  generate-test-fixtures.mjs  list-api-keys.ts  revoke-api-key.ts  seed-vector-data.ts  start-prefect.sh  test-api-direct.ts  test-auth.sh  test-discovery-verbose.ts  test-full-config.ts  test-pure-discovery.ts  test-streaming.ts  test-with-api.ts  verify-chroma.ts  verify-postgres.js
(+560 files in other folders)
