[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "artificer-sdk"
dynamic = ["version"]
description = "Python SDK for Artificer gRPC services - document processing and conversion"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Artificer Team", email = "support@artificer.dev"}
]
keywords = [
    "artificer",
    "grpc",
    "document-processing",
    "markdown",
    "html",
    "pdf",
    "ocr",
    "text-processing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "grpcio-tools>=1.60.0",
]

[project.urls]
Homepage = "https://github.com/loferris/artificer"
Documentation = "https://docs.artificer.dev"
Repository = "https://github.com/loferris/artificer"
"Bug Tracker" = "https://github.com/loferris/artificer/issues"

[tool.setuptools]
packages = ["artificer_sdk", "artificer_sdk.clients"]

[tool.setuptools.dynamic]
version = {attr = "artificer_sdk.version.__version__"}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
